--- a/pwaMdn/index.html
+++ b/pwaMdn/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="shortcut icon" href="/icon512.png" />
+    <link rel="shortcut icon" href="./icon512.png" />
     <title>Temperature converter</title>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
             }
         }
     </script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
