add module src js

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main class="flex justify-center items-center w-screen h-screen text-5xl">
         Coming Soon...
     </main>
-    <script src="./awslib/__nuxt_a72f235.js"></script>
-    <script src="./awslib/__sdk.amazonaws.com_js_aws-sdk-2.279.1.min.js"></script>
-    <script src="./awslib/__static.filestackapi.com_filestack-js_3.25.0_filestack.min.js"></script>
-    <script src="./awslib/_environment.js"></script>
+    <script type="module"src="./awslib/__nuxt_a72f235.js"></script>
+    <script type="module" src="./awslib/__sdk.amazonaws.com_js_aws-sdk-2.279.1.min.js"></script>
+    <script type="module" src="./awslib/__static.filestackapi.com_filestack-js_3.25.0_filestack.min.js"></script>
+    <script type="module" src="./awslib/_environment.js"></script>
 </body>
 
 </html>
